[gd_scene load_steps=2 format=3 uid="uid://buvmj3dr2vsjb"]

[ext_resource type="Script" uid="uid://dsmxapbr4bp78" path="res://hangman_game.gd" id="1_q70b7"]

[node name="HangmanGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q70b7")

[node name="fondo" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1500, 1000)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.3110001
anchor_bottom = 1.552
offset_left = 10.0
offset_top = 6.0
offset_right = -0.27209473
offset_bottom = 0.30395508
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.18039216, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -67.5
offset_right = 20.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "\"üî¨ Ahorcado - Comunicaciones √ìpticas\""
horizontal_alignment = 1

[node name="CategoryLabel" type="Label" parent="VBoxContainer"]
modulate = Color(1, 1, 0.16862746, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Categoria: \" tema \""

[node name="WordDisplay" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "_____"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(700, 60)
layout_mode = 2
text = "Pista:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LettersContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 9

[node name="AttemptsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "\"‚ù§Ô∏è Vidas: 6/6\""
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nueva palabra"

[node name="ExplanationLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(750, 200)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
